--- a/sysctl-boilerplate.conf
+++ b/sysctl-boilerplate.conf
@@ -3,8 +3,8 @@
 #          USAGE:  edit parameters and put them into /etc/sysctl.conf
 #
 #    DESCRIPTION:  This is a boilerplate of /etc/sysctl.conf kernel config file
-#                  adopted for server using with any modern Linux distribution.
-#                  This file contains some basic tweaks for a different kernel
+#                  adopted for server use with any modern Linux distribution.
+#                  This file contains some basic tweaks for different kernel
 #                  parameters which can increase performance, responsiveness
 #                  and network throughput in the high-load scenario for web
 #                  server, streaming or storage server, e.t.c.
@@ -41,7 +41,7 @@ kernel.pid_max = 65535
 # readers that are allowed to ptrace() the process. Usually it is useless.
 # kernel.maps_protect = 1
 
-# Enable ExecShield protection. Usually don't work in Ubuntu because it uses
+# Enable ExecShield protection. Usually doesn't work in Ubuntu because it uses
 # hardware NX when the CPU supports it or uses NX emulation in the kernel
 # equivalent of the Red Hat Exec Shield patch.
 # kernel.exec-shield = 1
