--- a/sysctl-boilerplate.conf
+++ b/sysctl-boilerplate.conf
@@ -100,9 +100,9 @@ fs.suid_dumpable = 0
 # Find values = $getconf _PHYS_PAGES and $getconf PAGE_SIZE.
 fs.file-max = 785928
 
-################################################################################
-########################### MEMORY SUBSYSTEM OPTIONS ###########################
-################################################################################
+###############################################################################
+########################### MEMORY SUBSYSTEM OPTIONS ##########################
+###############################################################################
 
 # If we have lots of memory we will avoid of using swap.
 # We want swappiness to be as close to zero as possible.
@@ -137,7 +137,7 @@ vm.mmap_min_addr = 4096
 # Keep at least 128MB of free RAM space available. When set to its default
 # value it is possible to encounter memory exhaustion symptoms when free memory
 # should in fact be available. Setting <vm.min_free_kbytes> to 5-6% of the
-# total amount of physical memory but no more than 2GB can prevent this problem.
+# total physical memory but no more than 2GB can prevent this problem.
 vm.min_free_kbytes = 131072
 
 # RED HAT DOES NOT RECOMMEND TUNNING THIS PARAMETER!
@@ -150,9 +150,9 @@ vm.min_free_kbytes = 131072
 # and writing eligible data to disk.
 # vm.dirty_writeback_centisecs = 6000
 
-################################################################################
-############################# NETWORK SPEED TWEAKS #############################
-################################################################################
+###############################################################################
+############################ NETWORK SPEED TWEAKS #############################
+###############################################################################
 
 # Turn on the tcp_timestamps. More accurate timestamp make TCP congestion
 # control algorithms work better and are recommended for fast networks.
