--- a/sysctl-boilerplate.conf
+++ b/sysctl-boilerplate.conf
@@ -1,5 +1,5 @@
 # =============================================================================
-#           FILE:  sysctl_boilerplate.conf
+#           FILE:  sysctl-boilerplate.conf
 #          USAGE:  edit parameters and put them into /etc/sysctl.conf
 #
 #    DESCRIPTION:  This is a boilerplate of /etc/sysctl.conf kernel config file
@@ -172,6 +172,7 @@ net.ipv4.tcp_moderate_rcvbuf = 1
 # congestion control algorithms that are available in your kernel run:
 # command $sysctl net.ipv4.tcp_available_congestion_control and to find algo
 # that can be loaded run $grep TCP_CONG /boot/config-$(uname -r).
+# also read this - http://fasterdata.es.net/host-tuning/linux/
 net.ipv4.tcp_congestion_control = cubic
 
 # For servers with tcp-heavy workloads, enable <fq> queue management scheduler.
