--- a/sysctl-boilerplate.conf
+++ b/sysctl-boilerplate.conf
@@ -1,29 +1,29 @@
-# =============================================================================
-#           FILE:  sysctl-boilerplate.conf
-#          USAGE:  edit parameters and put them into /etc/sysctl.conf
-#
-#    DESCRIPTION:  This is a boilerplate of /etc/sysctl.conf kernel config file
-#                  adopted for server use with any modern Linux distribution.
-#                  This file contains some basic tweaks for different kernel
-#                  parameters which can increase performance, responsiveness
-#                  and network throughput in the high-load scenario for web
-#                  server, streaming or storage server, e.t.c.
-#
-#   REQUIREMENTS:  /dev/brain, /dev/hands
-#          NOTES:  YOU MUST ADJUST ALL THESE PARAMETERS FOR YOUR SITUATION!
-#                  Also do not change the value of any kernel parameter on a
-#                  system where it is already set higher than listed as minimum
-#                  requirement in this boilerplate.
-#         AUTHOR:  Stanislav "systematicat" Kotivetc, <@systematicat>
-#        COMPANY:  Hire me! I am a cool dude!
-#        VERSION:  1.0
-#        CREATED:  09.01.2017 - 17:15
-#      COPYRIGHT:  2017 Stanislav "systematicat" Kotivetc
-#        LICENSE:  WTFPL v2
-# =============================================================================
+# =========================================================================== #
+#           FILE:  sysctl-boilerplate.conf                                    #
+#          USAGE:  edit parameters and put them into /etc/sysctl.conf         #
+#                                                                             #
+#    DESCRIPTION:  This is a boilerplate of /etc/sysctl.conf kernel config    #
+#                  adopted for server use with any modern Linux distribution. #
+#                  This file contains some basic tweaks for different kernel  #
+#                  parameters which can increase performance, responsiveness  #
+#                  and network throughput in the high-load scenario for web   #
+#                  server, streaming or storage server, e.t.c.                #
+#                                                                             #
+#   REQUIREMENTS:  /dev/brain, /dev/hands                                     #
+#          NOTES:  YOU MUST ADJUST ALL THESE PARAMETERS FOR YOUR SITUATION!   #
+#                  Also do not change the value of any kernel parameter on a  #
+#                  system where it is already set higher than listed as       #
+#                  minimum requirement in this boilerplate.                   #
+#         AUTHOR:  Stanislav "systematicat" Kotivetc, <@systematicat>         #
+#        COMPANY:  Hire me! I am a cool dude!                                 #
+#        VERSION:  1.0                                                        #
+#        CREATED:  09.01.2017 - 17:15                                         #
+#      COPYRIGHT:  2017 Stanislav "systematicat" Kotivetc                     #
+#        LICENSE:  WTFPL v2                                                   #
+# =========================================================================== #
 
 ###############################################################################
-############################ GENERAL SYSTEM OPTIONS ###########################
+########################## GENERAL SYSTEM OPTIONS #############################
 ###############################################################################
 
 # Controls the System Request debugging functionality of the kernel.
@@ -101,7 +101,7 @@ fs.suid_dumpable = 0
 fs.file-max = 785928
 
 ###############################################################################
-########################### MEMORY SUBSYSTEM OPTIONS ##########################
+######################### MEMORY SUBSYSTEM OPTIONS ############################
 ###############################################################################
 
 # If we have lots of memory we will avoid of using swap.
@@ -151,7 +151,7 @@ vm.min_free_kbytes = 131072
 # vm.dirty_writeback_centisecs = 6000
 
 ###############################################################################
-############################ NETWORK SPEED TWEAKS #############################
+########################## NETWORK SPEED TWEAKS ###############################
 ###############################################################################
 
 # Turn on the tcp_timestamps. More accurate timestamp make TCP congestion
