--- a/sysctl-boilerplate.conf
+++ b/sysctl-boilerplate.conf
@@ -173,18 +173,19 @@ net.ipv4.tcp_moderate_rcvbuf = 1
 # command $sysctl net.ipv4.tcp_available_congestion_control and to find algo
 # that can be loaded run $grep TCP_CONG /boot/config-$(uname -r).
 # also read this - http://fasterdata.es.net/host-tuning/linux/
-net.ipv4.tcp_congestion_control = cubic
+#net.ipv4.tcp_congestion_control = cubic
 
 # For servers with tcp-heavy workloads, enable <fq> queue management scheduler.
 # Highly recommended for CentOS7/Debian8 hosts.
-net.core.default_qdisc = fq
+#net.core.default_qdisc = fq
 
 # If you are using Jumbo Frames, also set this tunable.
 # net.ipv4.tcp_mtu_probing = 1
 
 # Set max number of queued connections on a socket. The default value usually
 # is too low. Raise this value substantially to support bursts of request.
-net.core.somaxconn = 8192
+#Modified
+net.core.somaxconn = 98192
 
 # Try to reuse time-wait connections.
 # But don't recycle them (recycle can break clients behind NAT).
@@ -202,13 +203,13 @@ net.ipv4.tcp_window_scaling = 1
 net.ipv4.tcp_fin_timeout = 10
 
 # Decrease the time default value for connections to keep alive.
-net.ipv4.tcp_keepalive_time = 512
-net.ipv4.tcp_keepalive_probes = 10
-net.ipv4.tcp_keepalive_intvl = 32
+#net.ipv4.tcp_keepalive_time = 512
+#net.ipv4.tcp_keepalive_probes = 10
+#net.ipv4.tcp_keepalive_intvl = 32
 
 # Limit orphans because each orphan can eat up to 16M of unswappable memory.
-net.ipv4.tcp_max_orphans = 16384
-net.ipv4.tcp_orphan_retries = 0
+#net.ipv4.tcp_max_orphans = 16384
+#net.ipv4.tcp_orphan_retries = 0
 
 # Increase the maximum memory used to reassemble IP fragments.
 net.ipv4.ipfrag_high_thresh = 589824
@@ -218,21 +219,21 @@ net.ipv4.ipfrag_low_thresh = 524288
 net.unix.max_dgram_qlen = 512
 
 # Do not allow the arp table to become bigger than this
-net.ipv4.neigh.default.gc_thresh3 = 4096
+net.ipv4.neigh.default.gc_thresh3 = 40960
 
 # Tell the gc when to become aggressive with arp table cleaning.
-net.ipv4.neigh.default.gc_thresh2 = 2048
+net.ipv4.neigh.default.gc_thresh2 = 20480
 
 # Adjust where the gc will leave arp table alone.
 net.ipv4.neigh.default.gc_thresh1 = 1024
 
 # Adjust to arp table gc to clean-up more often
-net.ipv4.neigh.default.gc_interval = 30
+net.ipv4.neigh.default.gc_interval = 300
 
 # Increase TCP queue length in order to reduce a performance spike with
 # relation to timestamps generation.
-net.ipv4.neigh.default.proxy_qlen = 96
-net.ipv4.neigh.default.unres_qlen = 6
+net.ipv4.neigh.default.proxy_qlen = 9600
+net.ipv4.neigh.default.unres_qlen = 600
 
 # Enable a fix for RFC1337 - time-wait assassination hazards in TCP.
 net.ipv4.tcp_rfc1337 = 1
@@ -294,97 +295,38 @@ net.ipv4.udp_wmem_min = 65536
 
 # Increase Linux auto-tuning TCP buffer limits.
 # Set max to 16MB buffer (16777216) for 1GE network.
-net.core.rmem_max = 16777216
-net.core.wmem_max = 16777216
-net.core.rmem_default = 16777216
-net.core.wmem_default = 16777216
-net.core.optmem_max = 40960
-net.ipv4.tcp_rmem = 4096 87380 16777216
-net.ipv4.tcp_wmem = 4096 65536 16777216
+#net.core.rmem_max = 167772160
+#net.core.wmem_max = 167772160
+#net.core.rmem_default = 167772160
+#net.core.wmem_default = 167772160
+#net.core.optmem_max = 40960
+#net.ipv4.tcp_rmem = 40960 873800 167772160
+#net.ipv4.tcp_wmem = 40960 655360 167772160
 
 # Setting 10GE capable host to consume a maximum of 32M-64M per socket ensures
 # parallel streams work well and do not consume a majority of system resources.
 # Set max 32MB buffer (33554432) for 10GE network.
-# net.core.rmem_max = 33554432
-# net.core.wmem_max = 33554432
-# net.core.rmem_default = 33554432
-# net.core.wmem_default = 33554432
-# net.core.optmem_max = 40960
-# net.ipv4.tcp_rmem = 4096 87380 33554432
-# net.ipv4.tcp_wmem = 4096 65536 33554432
+net.core.rmem_max = 33554432
+net.core.wmem_max = 33554432
+net.core.rmem_default = 33554432
+net.core.wmem_default = 33554432
+net.core.optmem_max = 40960
+net.ipv4.tcp_rmem = 4096 87380 33554432
+net.ipv4.tcp_wmem = 4096 65536 33554432
 
-# If you have a lot of memory set max 54MB buffer (56623104) for 10GE network.
-# net.core.rmem_max = 56623104
-# net.core.wmem_max = 56623104
-# net.core.rmem_default = 56623104
-# net.core.wmem_default = 56623104
-# net.core.optmem_max = 40960
-# net.ipv4.tcp_rmem = 4096 87380 56623104
-# net.ipv4.tcp_wmem = 4096 65536 56623104
+#For a host with a 10G NIC optimized for network paths up to 200ms RTT, 
+#and for friendliness to single and parallel stream tools, or a 40G NIC up on paths up to 50ms RTT:
+#http://fasterdata.es.net/host-tuning/linux/
 
-###############################################################################
-########################## NETWORK SECURITY TWEAKS ############################
-###############################################################################
-
-# Allowed local port range. Increase Ephemeral Ports.
-net.ipv4.ip_local_port_range = 1024 65535
-
-# Set Source Address Verification in all interfaces prevent spoofing attacks.
-net.ipv4.conf.default.rp_filter = 1
-net.ipv4.conf.all.rp_filter = 1
-
-# Uncomment the next line to enable TCP/IP SYN cookies.
-# Note: This may impact IPv6 TCP sessions too.
-# Note: This is evil to use this on high-load servers.
-# net.ipv4.tcp_syncookies = 1
-# net.ipv4.tcp_syn_retries = 2
-# net.ipv4.tcp_synack_retries = 2
-
-# Disable packet forwarding.
-net.ipv4.ip_forward = 0
-net.ipv4.conf.all.forwarding = 0
-net.ipv4.conf.default.forwarding = 0
-net.ipv6.conf.all.forwarding = 0
-net.ipv6.conf.default.forwarding = 0
-
-# Do not accept ICMP redirects. It prevents MITM attacks.
-net.ipv4.conf.all.accept_redirects = 0
-net.ipv4.conf.default.accept_redirects = 0
-net.ipv4.conf.all.secure_redirects = 0
-net.ipv4.conf.default.secure_redirects = 0
-net.ipv6.conf.all.accept_redirects = 0
-net.ipv6.conf.default.accept_redirects = 0
-
-# Do not send ICMP redirects because we are not a router.
-net.ipv4.conf.all.send_redirects = 0
-net.ipv4.conf.default.send_redirects = 0
-
-# Do not accept IP source route packets because we are not a router.
-net.ipv4.conf.all.accept_source_route = 0
-net.ipv4.conf.default.accept_source_route = 0
-net.ipv6.conf.all.accept_source_route = 0
-net.ipv6.conf.default.accept_source_route = 0
-
-# Do not relay bootp.
-net.ipv4.conf.all.bootp_relay = 0
-
-# Do not proxy arp for anyone.
-net.ipv4.conf.all.proxy_arp = 0
-
-# Do not ignore directed pings.
-net.ipv4.icmp_echo_ignore_all = 0
-
-# Enable ignoring broadcasts request.
-net.ipv4.icmp_echo_ignore_broadcasts = 1
-
-# Enable bad error message protection.
-net.ipv4.icmp_ignore_bogus_error_responses = 1
-
-# Disable ipv6 cos it is evil.
-# net.ipv6.conf.all.disable_ipv6 = 1
-# net.ipv6.conf.default.disable_ipv6 = 1
-# net.ipv6.conf.lo.disable_ipv6 = 1
-
-# Log Martian Packets.
-# net.ipv4.conf.all.log_martians = 1
-# net.ipv4.conf.default.log_martians = 1
+# allow testing with buffers up to 128MB
+#net.core.rmem_max = 134217728 
+#net.core.wmem_max = 134217728 
+# increase Linux autotuning TCP buffer limit to 64MB
+#net.ipv4.tcp_rmem = 4096 87380 67108864
+#net.ipv4.tcp_wmem = 4096 65536 67108864
+# recommended default congestion control is htcp 
+#net.ipv4.tcp_congestion_control=htcp
+# recommended for hosts with jumbo frames enabled
+#net.ipv4.tcp_mtu_probing=1
+# recommended for CentOS7+/Debian8+ hosts
+net.core.default_qdisc = fq
